--- a/racial_dominancy_map.html
+++ b/racial_dominancy_map.html
@@ -45,36 +45,36 @@
 		var colortemp = d3.scaleQuantize()
 									.domain([0, 100])
 									.range(d3.schemeGreys[9]);
-//		var colorWhi = d3.scaleQuantize()
-//									.domain([0, 100])
-//									.range(d3.schemeOrangs[9]);
-//		var colorBla = d3.scaleQuantize()
-//									.domain([0, 100])
-//									.range(d3.schemeBlues[9]);
-//		var colorInd = d3.scaleQuantize()
-//									.domain([0, 100])
-//									.range(d3.schemeGreys[9]);
-//		var colorAsi = d3.scaleQuantize()
-//									.domain([0, 100])
-//									.range(d3.schemePurples[9]);
-//		var colorNat = d3.scaleQuantize()
-//									.domain([0, 100])
-//									.range(d3.schemeReds[9]);
-//		var colorSom = d3.scaleQuantize()
-//									.domain([0, 100])
-//									.range(d3.schemeGreys[9]);
-//		var colorMor = d3.scaleQuantize()
-//									.domain([0, 100])
-//									.range(d3.schemeGreys[9]);
-//		var colorLat = d3.scaleQuantize()
-//									.domain([0, 100])
-//									.range(d3.schemeGreens[9]);
+		var colorWhi = d3.scaleQuantize()
+									.domain([0, 100])
+									.range(d3.schemeOranges[9]);
+		var colorBla = d3.scaleQuantize()
+									.domain([0, 100])
+									.range(d3.schemeBlues[9]);
+		var colorInd = d3.scaleQuantize()
+									.domain([0, 100])
+									.range(d3.schemeGreys[9]);
+		var colorAsi = d3.scaleQuantize()
+									.domain([0, 100])
+									.range(d3.schemePurples[9]);
+		var colorNat = d3.scaleQuantize()
+									.domain([0, 100])
+									.range(d3.schemeReds[9]);
+		var colorSom = d3.scaleQuantize()
+									.domain([0, 100])
+									.range(d3.schemeGreys[9]);
+		var colorMor = d3.scaleQuantize()
+									.domain([0, 100])
+									.range(d3.schemeGreys[9]);
+		var colorLat = d3.scaleQuantize()
+									.domain([0, 100])
+									.range(d3.schemeGreens[9]);
 
 		var race = d3.map();
 
 		var promises = [d3.json(nycgeourl),
 										d3.csv(raceurl, function(d){
-											race.set(d.modzcta, [+d.maxperc, +d.maxrace]);
+											race.set(d.modzcta, [+d.maxperc, d.maxrace]);
 										})];
 
 		Promise.all(promises).then(ready);
@@ -86,19 +86,28 @@
 						.data(nyc.features)
 						.enter()
 						.append('path')
-						.style("fill",function(d){return colortemp(d.maxperc = race.get(d.properties.modzcta)[0])})
+						//.style("fill",function(d){return colortemp(race.get(d.properties.modzcta)[0])})
+						.style("fill",function(d){
+							switch (race.get(d.properties.modzcta)[1]) {
+								case 'Percent of Population that is Non-Hispanic White':
+									return colorWhi(race.get(d.properties.modzcta)[0]);
+									break;
+								case 'Percent of Population that is Black or African American':
+									return colorBla(race.get(d.properties.modzcta)[0]);
+									break;
+								case 'Percent of Population that is Asian':
+									return colorAsi(race.get(d.properties.modzcta)[0]);
+									break;
+								case 'Percent of Population that is Hispanic or Latino':
+									return colorLat(race.get(d.properties.modzcta)[0]);
+									break;
+								default:
+									return colortemp(race.get(d.properties.modzcta)[0]);
+							}
+						})
 						.attr('stroke', 'gray')
 						.attr('d', path)
 					};
-
-
-//				.style("fill",function(d){
-//					if(d.maxrace="Percent of Population that is Non-Hispanic White"){
-//						return colorWhi(d.maxperc = race.get(d.properties.modzcta)[0])
-//					} else {
-//						return colorBla(d.maxperc = race.get(d.properties.modzcta)[0])
-//					})
-
 	</script>
 </body>
 
